--- a/app/src/main/res/layout/fragment_me.xml
+++ b/app/src/main/res/layout/fragment_me.xml
@@ -8,7 +8,7 @@
 
         <variable
             name="vm"
-            type="hochschule.de.bachelorthesis.view_model.fragments.MeViewModel" />
+            type="hochschule.de.bachelorthesis.view_model.viewModels.MeViewModel" />
     </data>
 
     <androidx.coordinatorlayout.widget.CoordinatorLayout
