--- a/app/src/main/res/layout/fragment_add_measurement.xml
+++ b/app/src/main/res/layout/fragment_add_measurement.xml
@@ -7,7 +7,7 @@
 
         <variable
             name="viewModel"
-            type="hochschule.de.bachelorthesis.view_model.fragments.FoodInfoViewModel" />
+            type="hochschule.de.bachelorthesis.view_model.viewModels.AddMeasurementViewModel" />
     </data>
 
     <ScrollView
@@ -28,38 +28,56 @@
                 android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                 android:textColor="@color/colorPrimary" />
 
-            <com.google.android.material.textfield.TextInputLayout
-                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-                android:layout_width="match_parent"
+            <LinearLayout
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:focusableInTouchMode="true"
-                android:hint="@string/date"
                 android:paddingStart="32dp"
                 android:paddingEnd="32dp"
-                android:paddingBottom="16dp">
+                android:weightSum="2"
+                android:orientation="horizontal">
 
-                <com.google.android.material.textfield.TextInputEditText
+                <Button
                     android:id="@+id/date"
-                    android:layout_width="match_parent"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:inputType="date" />
-            </com.google.android.material.textfield.TextInputLayout>
+                    android:layout_weight="1"
+                    android:text="Chose Date"/>
 
-            <com.google.android.material.textfield.TextInputLayout
-                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-                android:layout_width="match_parent"
+                <TextView
+                    style="@style/TextAppearance.MaterialComponents.Body1"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:paddingLeft="32dp"
+                    android:gravity="center"
+                    android:layout_weight="1"
+                    android:text="Date" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:hint="@string/time_consumed"
                 android:paddingStart="32dp"
                 android:paddingEnd="32dp"
-                android:paddingBottom="16dp">
+                android:weightSum="2"
+                android:orientation="horizontal">
 
-                <com.google.android.material.textfield.TextInputEditText
+                <Button
                     android:id="@+id/time"
-                    android:layout_width="match_parent"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:inputType="text" />
-            </com.google.android.material.textfield.TextInputLayout>
+                    android:layout_weight="1"
+                    android:text="Chose Time"/>
+
+                <TextView
+                    style="@style/TextAppearance.MaterialComponents.Body1"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:paddingLeft="32dp"
+                    android:layout_weight="1"
+                    android:gravity="center"
+                    android:text="Time" />
+            </LinearLayout>
+
 
             <!-- Advance information-->
             <TextView
@@ -138,7 +156,7 @@
                 android:paddingBottom="16dp">
 
                 <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/add_measurement_mv0"
+                    android:id="@+id/mv0"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:inputType="number" />
@@ -154,7 +172,7 @@
                 android:paddingBottom="16dp">
 
                 <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/add_measurement_mv15"
+                    android:id="@+id/mv15"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:inputType="number" />
@@ -170,7 +188,7 @@
                 android:paddingBottom="16dp">
 
                 <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/add_measurement_mv30"
+                    android:id="@+id/mv30"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:inputType="number" />
@@ -186,7 +204,7 @@
                 android:paddingBottom="16dp">
 
                 <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/add_measurement_mv45"
+                    android:id="@+id/mv45"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:inputType="number" />
@@ -202,7 +220,7 @@
                 android:paddingBottom="16dp">
 
                 <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/add_measurement_mv60"
+                    android:id="@+id/mv60"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:inputType="number" />
@@ -218,7 +236,7 @@
                 android:paddingBottom="16dp">
 
                 <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/add_measurement_mv75"
+                    android:id="@+id/mv75"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:inputType="number" />
@@ -234,7 +252,7 @@
                 android:paddingBottom="16dp">
 
                 <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/add_measurement_mv90"
+                    android:id="@+id/mv90"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:inputType="number" />
@@ -250,7 +268,7 @@
                 android:paddingBottom="16dp">
 
                 <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/add_measurement_mv105"
+                    android:id="@+id/mv105"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:inputType="number" />
@@ -266,13 +284,11 @@
                 android:paddingBottom="16dp">
 
                 <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/add_measurement_mv120"
+                    android:id="@+id/mv120"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:inputType="number" />
             </com.google.android.material.textfield.TextInputLayout>
-
-
         </LinearLayout>
     </ScrollView>
 </layout>
