--- a/app/src/main/res/layout/fragment_food.xml
+++ b/app/src/main/res/layout/fragment_food.xml
@@ -7,7 +7,7 @@
     <data>
         <variable
             name="viewModel"
-            type="hochschule.de.bachelorthesis.view_model.fragments.MeViewModel" />
+            type="hochschule.de.bachelorthesis.view_model.viewModels.MeViewModel" />
     </data>
 
     <androidx.coordinatorlayout.widget.CoordinatorLayout
