--- a/app/src/main/res/layout/fragment_food_data.xml
+++ b/app/src/main/res/layout/fragment_food_data.xml
@@ -6,7 +6,7 @@
 
         <variable
             name="vm"
-            type="hochschule.de.bachelorthesis.view_model.fragments.FoodInfoViewModel" />
+            type="hochschule.de.bachelorthesis.view_model.viewModels.FoodInfoViewModel" />
     </data>
 
     <TableLayout
