--- a/app/src/main/res/layout/fragment_food_info.xml
+++ b/app/src/main/res/layout/fragment_food_info.xml
@@ -6,7 +6,7 @@
     <data>
         <variable
             name="vm"
-            type="hochschule.de.bachelorthesis.view_model.fragments.FoodInfoViewModel" />
+            type="hochschule.de.bachelorthesis.view_model.viewModels.FoodInfoViewModel" />
     </data>
 
     <androidx.coordinatorlayout.widget.CoordinatorLayout
