--- a/app/src/main/res/layout/fragment_add_measurement.xml
+++ b/app/src/main/res/layout/fragment_add_measurement.xml
@@ -31,50 +31,52 @@
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:orientation="horizontal"
                 android:paddingStart="32dp"
                 android:paddingEnd="32dp"
-                android:weightSum="2"
-                android:orientation="horizontal">
+                android:weightSum="2">
 
                 <Button
-                    android:id="@+id/date"
+                    android:id="@+id/date_button"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:text="Chose Date"/>
+                    android:text="Chose Date" />
 
                 <TextView
+                    android:id="@+id/date"
                     style="@style/TextAppearance.MaterialComponents.Body1"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:paddingLeft="32dp"
-                    android:gravity="center"
                     android:layout_weight="1"
+                    android:gravity="center"
+                    android:paddingLeft="32dp"
                     android:text="Date" />
             </LinearLayout>
 
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:orientation="horizontal"
                 android:paddingStart="32dp"
                 android:paddingEnd="32dp"
-                android:weightSum="2"
-                android:orientation="horizontal">
+                android:weightSum="2">
 
                 <Button
-                    android:id="@+id/time"
+                    android:id="@+id/time_button"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:text="Chose Time"/>
+                    android:text="Chose Time" />
 
                 <TextView
+                    android:id="@+id/time"
                     style="@style/TextAppearance.MaterialComponents.Body1"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:paddingLeft="32dp"
                     android:layout_weight="1"
                     android:gravity="center"
+                    android:paddingLeft="32dp"
                     android:text="Time" />
             </LinearLayout>
 
