--- a/app/src/main/res/layout/fragment_measurements.xml
+++ b/app/src/main/res/layout/fragment_measurements.xml
@@ -17,9 +17,10 @@
         >
 
         <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/recycler_view"
+            android:id="@+id/recyclerView"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"/>
+            android:layout_height="match_parent"
+            />
 
         <hochschule.de.bachelorthesis.widget.BetterFloatingActionButton
             android:id="@+id/add"
