--- a/app/src/main/res/menu/me_menu.xml
+++ b/app/src/main/res/menu/me_menu.xml
@@ -3,27 +3,14 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
-        android:id="@+id/menu_me_edit"
+        android:id="@+id/add_tmp_user"
         android:orderInCategory="100"
-        android:title="@string/edit"
-        android:icon="@drawable/ic_edit_white"
-        app:showAsAction="ifRoom" />
+        android:title="@string/add_sample_user"
+        app:showAsAction="never" />
 
     <item
-        android:id="@+id/menu_me_cancel"
+        android:id="@+id/delete_user"
         android:orderInCategory="100"
-        android:title="@string/cancel"
-        android:icon="@drawable/ic_close_white_24dp"
-        app:showAsAction="ifRoom"
-        android:visible="false"
-        />
-
-    <item
-        android:id="@+id/menu_me_save"
-        android:orderInCategory="100"
-        android:title="@string/save"
-        android:icon="@drawable/ic_save_white_24dp"
-        app:showAsAction="ifRoom"
-        android:visible="false"
-        />
+        android:title="Delete user (debug)"
+        app:showAsAction="never" />
 </menu>
