--- a/app/src/main/res/layout/fragment_food_info.xml
+++ b/app/src/main/res/layout/fragment_food_info.xml
@@ -12,7 +12,7 @@
     <androidx.coordinatorlayout.widget.CoordinatorLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".view.fragments.foodInfo.FoodInfoFragment">
+        tools:context=".view.food.FoodInfoFragment">
 
         <com.google.android.material.appbar.AppBarLayout
             android:id="@+id/appbar"
