--- a/app/src/main/res/layout/fragment_me.xml
+++ b/app/src/main/res/layout/fragment_me.xml
@@ -24,7 +24,7 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="16dp"
                 android:stretchColumns="1"
-                tools:context=".view.activities.MainActivity">
+                tools:context=".view.MainActivity">
 
                 <TextView
                     android:layout_width="wrap_content"
